05_security_hardening_cookbook/policies/constraints/block-public-lb.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockPublicLB
metadata:
  name: block-public-lb
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
